--- a/main.css
+++ b/main.css
@@ -2,7 +2,8 @@ html, body {
   height:100%;
   padding: 0;
   margin:0;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   font-family: Helvetica;
 }
 
