--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ html, body {
   height:100%;
   padding: 0;
   margin:0;
-  overflow-y: hidden;
+  overflow-y: scroll;
   overflow-x: scroll;
   font-family: Helvetica;
 }
