--- a/main.css
+++ b/main.css
@@ -142,7 +142,7 @@ html, body {
 }
 
 #descript {
-  background-color: #e6e6e6;
+  /*background-color: #e6e6e6;*/
   width: 406px;
   float: left;
   top:-30px;
