--- a/main.css
+++ b/main.css
@@ -289,7 +289,7 @@ html, body {
   height: 100%;
 }
 #download-block {
-  background-color: #fff;
+  background-color: #fff:
   width: 33%;
   float: left;
   text-align: center;
